# mtapi

./: .gitignore  Cargo.toml  LICENSE  README.md  mtapi_example.toml
src/: apiget.rs  apipost.rs  config.rs  main.rs
