[package]
name = "mtapi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
urlencoding = "2"

[profile.dev]
opt-level = "z"
debug = true
strip = "debuginfo"
lto = false
codegen-units = 2
panic = "unwind"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

